#2386 Minor improvements.